[gd_scene load_steps=5 format=3 uid="uid://du5eo6opgry3p"]

[ext_resource type="Script" path="res://Scenes/GameElements/shelves_rack.gd" id="1_nj8dy"]
[ext_resource type="Texture2D" uid="uid://0ly7rk3lfwva" path="res://Sprites/caja-de-entrega.png" id="1_vhnsy"]
[ext_resource type="FontFile" uid="uid://cy04exvuwceek" path="res://Fonts/ArsenalSC-Regular.ttf" id="2_48bt4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3r3v"]
size = Vector2(148.537, 149.099)

[node name="ShelvesRack" type="Node2D"]
script = ExtResource("1_nj8dy")

[node name="Area2D" type="Area2D" parent="." groups=["shelves_1A"]]
position = Vector2(1.52588e-05, 0)
scale = Vector2(0.177734, 0.177734)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.000183105, -0.000244141)
scale = Vector2(20, 20)
shape = SubResource("RectangleShape2D_h3r3v")
one_way_collision_margin = 0.0

[node name="ShelvesButton" type="Button" parent="Area2D"]
offset_left = -1474.0
offset_top = -1485.0
offset_right = 1497.0
offset_bottom = 1485.0
icon = ExtResource("1_vhnsy")
icon_alignment = 1
expand_icon = true

[node name="sprite_shelves" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_vhnsy")

[node name="label_boxes_cuantity" type="Label" parent="."]
offset_left = -176.45
offset_right = 173.55
offset_bottom = 189.0
theme_override_colors/font_color = Color(0.345459, 0.766225, 0.503299, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("2_48bt4")
theme_override_font_sizes/font_size = 150
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="label_value_per_box" type="Label" parent="."]
offset_left = -262.0
offset_top = -421.0
offset_right = 264.0
offset_bottom = -270.0
theme_override_colors/font_color = Color(0.92549, 0.223529, 0.4, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_48bt4")
theme_override_font_sizes/font_size = 120
text = "$2 x Caja
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="column_row" type="Label" parent="."]
offset_left = -262.0
offset_top = -547.0
offset_right = -139.0
offset_bottom = -396.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_48bt4")
theme_override_font_sizes/font_size = 120
text = "1A
"
horizontal_alignment = 1
vertical_alignment = 1
